--- a/.github/workflows/workflow_dispatch_mappings.yml
+++ b/.github/workflows/workflow_dispatch_mappings.yml
@@ -27,4 +27,4 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          echo "Hello ${{ github.event.inputs.person.name }}! How is ${{ github.event.inputs.person.country }}?"
+          echo "Hello ${{ fromJSON(github.event.inputs.person).name }}! How is ${{ fromJSON(github.event.inputs.person).country }}?"
