--- a/.github/workflows/workflow_dispatch_mappings.yml
+++ b/.github/workflows/workflow_dispatch_mappings.yml
@@ -11,14 +11,14 @@ on:
         type: choice
         description: selected human
         options:
-          leo: {name: "Leonardo", "job": "painter", "country", "us"}
-          mia: {name: "Mia", "job": "engineer", "country", "ca"}
+          leo: {name: "Leonardo", "job": "painter", "country": "us"}
+          mia: {name: "Mia", "job": "engineer", "country": "ca"}
       magic:
         type: choice
         description: selected human
         options:
-          - '{name: "Leonardo", "job": "painter", "country", "us"}'
-          - '{name: "Mia", "job": "engineer", "country", "ca"}'
+          - '{name: "Leonardo", "job": "painter", "country": "us"}'
+          - '{name: "Mia", "job": "engineer", "country": "ca"}'
           
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -34,4 +34,5 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo "Hello ${{ fromJSON(github.event.inputs.person).name }}! How is ${{ fromJSON(github.event.inputs.person).country }}?"
+          echo "Hello ${{ fromJSON(github.event.inputs.person)[0] }}, ${{ fromJSON(github.event.inputs.person)[1].name }}! How is ${{ fromJSON(github.event.inputs.person)[1].country }}?"
           echo "Hello ${{ fromJSON(github.event.inputs.magic).name }}! How is ${{ fromJSON(github.event.inputs.magic).country }}?"
