--- a/.github/workflows/shared_settings.yml
+++ b/.github/workflows/shared_settings.yml
@@ -23,8 +23,10 @@ jobs:
           curl -v
           -H 'Authorization: ${{ github.token }}'
           -H 'Accept: application/vnd.github.v3.raw'
-          -L ${{ github.api_url }}/repos/${{ github.repository }}/contents/${{ github.ref_name }}/.github/workflows/shared.txt
-          | awk '{ if ($1 == "${{ inputs.species }}") print "::set-output name=" $2 "::" $3 }'
+          -L '${{ github.api_url }}/repos/${{ github.repository }}/contents/.github/workflows/shared.txt?ref=${{ github.ref_name }}'
+          | tee shared.txt
+          | awk '{ if ($1 == "${{ github.event.inputs.species }}") print "::set-output name=" $2 "::" $3 }'
+      - run: cat shared.txt
 
   use:
     runs-on: ubuntu-latest
@@ -35,4 +37,4 @@ jobs:
     steps:
       - name: report settings
         run: >
-          echo ${{ inputs.species }} has genus: $GENUS
+          echo ${{ github.event.inputs.species }} has genus: $GENUS
